--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
       "allowSyntheticDefaultImports": true,
-      "sourceMap": true,
+      "sourceMap": false,
       "noEmit": false,
       "declaration": false,
       "noEmitHelpers": false,
