--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.2",
     "ts-node": "^7.0.1",
+    "tunnel": "0.0.6",
     "typescript": "^3.1.6"
   },
   "devDependencies": {
