--- a/package.json
+++ b/package.json
@@ -14,17 +14,19 @@
     "typescript": "^3.1.6"
   },
   "devDependencies": {
+    "cross-env": "^5.2.0",
+    "ts-loader": "^5.2.0",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.1",
-    "ts-loader": "^5.2.0"
+    "webpack-cli": "^3.1.1"
   },
   "scripts": {
     "lighthouse": "lighthouse",
     "rimraf": "rimraf",
     "clean:dist": "npm run rimraf -- dist",
     "build": "npm run clean:dist && tsc",
-    "start": "ts-node ./src/index.ts"
+    "start": "ts-node ./src/index.ts",
+    "start:dev": "cross-env MODE=\"dev\" npm run start"
   },
   "repository": {
     "type": "git",
